# 7559-TP1

./: .gitignore  CMakeLists.txt  ConfigLoader.cpp  Logger.h  Menu.cpp  Menu.h  PlatoComida.cpp  PlatoComida.h  data.conf  log-Restorrente  main.cpp
src/: AdministradorLiving.cpp  AdministradorLiving.h  AtenderSignal.h  Cliente.cpp  Cliente.h  ClientesPorComer.cpp  ClientesPorComer.h  ConfigLoader.cpp  ConfigLoader.h  Configurador.cpp  Configurador.h  Constantes.h  GeneradorClientes.cpp  GeneradorClientes.h  GeneradorDeCocinero.cpp  GeneradorDeCocinero.h  GeneradorMozos.cpp  GeneradorMozos.h  GeneradorRecepcionistas.cpp  GeneradorRecepcionistas.h  IDSemaforos.h  LockFile.cpp  Logger.cpp  Logger.h  Menu.cpp  Menu.h  Mesas.cpp  Mesas.h  PlatoComida.cpp  Proceso.cpp  Recepcionista.cpp  Recepcionista.h  Semaforo.cpp  Semaforo.h  Utils.cpp  Utils.h  main.cpp
src/Estructuras/: Archivo.cpp  Archivo.h  Caja.cpp  Caja.h  Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h  IDSemaforos.h  LockFile.cpp  LockFile.h  MemoriaCompartida.h  MemoriaCompartida2.h  Pipe.cpp  Pipe.h  SIGINT_Handler.h  Semaforo.cpp  Semaforo.h
src/Procesos/: Cliente.cpp  Cliente.h  Cocinero.cpp  Cocinero.h  CorteDeLuz.cpp  CorteDeLuz.h  Gerente.cpp  Gerente.h  Mozo.cpp  Mozo.h  Proceso.cpp  Proceso.h  RecepcionLiving.cpp  RecepcionLiving.h  Recepcionista.cpp  Recepcionista.h  SaldoDeMesa.cpp  SaldoDeMesa.h
